<resources>
    <string name="app_name">Magic Search</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="search">Search</string>
    <string name="mydecks">My Decks</string>
    <string name="wishlist">Wishlist</string>
    <string name="cardlist">Card List</string>
    <string name="cardimage">Card Image</string>
    <string name="flip">Flip</string>
    <string name="share">Share</string>
    <string name="more">More</string>
    <string name="result">Result</string>
    <string name="of">of</string>
    <string name="unique">unique</string>
    <string name="order">order</string>
    <string name="dir">dir</string>
    <string name="msg_not_found">Your query didn’t match any cards. Adjust your search terms or refer to the syntax guide at https://scryfall.com/docs/reference</string>
    <string name="image">Image</string>
    <string name="name">Name</string>
    <string-array name="array_unique">
        <item>cards</item>
        <item>art</item>
        <item>prints</item>
    </string-array>
    <string-array name="array_order">
        <item>name</item>
        <item>set</item>
        <item>released</item>
        <item>rarity</item>
        <item>color</item>
        <item>usd</item>
        <item>tix</item>
        <item>eur</item>
        <item>cmc</item>
        <item>power</item>
        <item>toughness</item>
        <item>edhrec</item>
        <item>artist</item>
        <item>review</item>
    </string-array>
    <string-array name="array_wish_order">
        <item>name</item>
        <item>type</item>
        <item>rarity</item>
        <item>cmc</item>
        <item>power</item>
        <item>toughness</item>
    </string-array>
    <string-array name="array_deck_sort">
        <item>date</item>
        <item>name</item>
        <item>format</item>
    </string-array>
    <string-array name="array_deck_order">
        <item>desc</item>
        <item>asc</item>
    </string-array>
    <string-array name="array_dir">
        <item>auto</item>
        <item>asc</item>
        <item>desc</item>
    </string-array>
    <string-array name="array_grid">
        <item>1 col</item>
        <item>2 col</item>
    </string-array>
    <string-array name="array_language">
        <item>Any</item>
        <item>en</item>
        <item>es</item>
        <item>fr</item>
        <item>de</item>
        <item>it</item>
        <item>pt</item>
        <item>ja</item>
        <item>ko</item>
        <item>ru</item>
        <item>zhs</item>
        <item>zht</item>
        <item>he</item>
        <item>la</item>
        <item>grc</item>
        <item>ar</item>
        <item>sa</item>
        <item>ph</item>
    </string-array>
    <string name="cardName">Card Name</string>
    <string name="typeLine">Type Line</string>
    <string name="oracleText">Oracle Text</string>
    <string name="loyalty">Loyalty</string>
    <string name="cardArtist">Card Artist</string>
    <string name="setName">Set Name</string>
    <string name="setLine">Set Line</string>
    <string name="amount">amount</string>
    <string name="type">Type</string>
    <string name="deckName">Deck Name</string>
    <string name="format">Format</string>
    <string name="notes">Notes</string>
    <string name="mainDeck">Main Deck</string>
    <string name="sideboard">Sideboard</string>
    <string name="maybeboard">Maybeboard</string>
    <string name="hint_notes">Comments, tips or notes related to this deck.</string>
</resources>