<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.mtgcardsearch.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.mtgcardsearch.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.mtgcardsearch.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_wishlist"
        android:name="com.example.mtgcardsearch.ui.wishlist.WishlistFragment"
        android:label="@string/wishlist"
        tools:layout="@layout/fragment_wishlist" />

    <fragment
        android:id="@+id/nav_mydecks"
        android:name="com.example.mtgcardsearch.ui.mydecks.MydecksFragment"
        android:label="@string/mydecks"
        tools:layout="@layout/fragment_mydecks" />

    <fragment
        android:id="@+id/nav_cardslist"
        android:name="com.example.mtgcardsearch.ui.cardslist.CardslistFragment"
        android:label="@string/cardslist"
        tools:layout="@layout/fragment_cardslist" />
</navigation>