<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.card.CardFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:checkable="true"
                android:clickable="true"
                android:focusable="true">

                <LinearLayout
                    android:id="@+id/ll_card_det"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="16dp"
                    android:orientation="vertical"
                    android:paddingStart="16dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <!-- Media -->
                        <ImageView
                            android:id="@+id/iv_card_image"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/cardimage"
                            android:scaleType="fitCenter"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <com.google.android.material.floatingactionbutton.FloatingActionButton
                            android:id="@+id/fab_card_flip"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="128dp"
                            android:layout_marginEnd="16dp"
                            android:contentDescription="@string/flip"
                            app:layout_constraintEnd_toEndOf="@+id/iv_card_image"
                            app:layout_constraintTop_toTopOf="parent"
                            app:srcCompat="@drawable/ic_baseline_flip_camera_android_24"
                            tools:visibility="gone" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <!-- Buttons -->
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:orientation="horizontal">

                        <com.google.android.material.button.MaterialButton
                            style="?attr/borderlessButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/share"
                            android:minWidth="0dp"
                            android:minHeight="0dp"
                            app:icon="@drawable/ic_baseline_share_24"
                            app:iconPadding="0dp" />

                        <com.google.android.material.button.MaterialButton
                            style="?attr/borderlessButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/wishlist"
                            android:minWidth="0dp"
                            android:minHeight="0dp"
                            app:icon="@drawable/ic_baseline_favorite_border_24"
                            app:iconPadding="0dp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <!-- Title, secondary and supporting text -->

                        <TextView
                            android:id="@+id/tx_card_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/cardName"
                            android:textAppearance="?attr/textAppearanceHeadline6" />

                        <TextView
                            android:id="@+id/tx_card_type_line"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/typeLine"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                            android:textColor="?android:attr/textColorSecondary" />

                        <TextView
                            android:id="@+id/tx_card_oracle_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/oracleText"
                            android:textAppearance="?attr/textAppearanceBody2"
                            android:textColor="?android:attr/textColorSecondary" />

                        <TextView
                            android:id="@+id/tx_card_loyalty"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/loyalty"
                            android:textAppearance="?attr/textAppearanceHeadline6" />

                        <TextView
                            android:id="@+id/tx_card_artist"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:layout_marginBottom="8dp"
                            android:text="@string/cardArtist"
                            android:textAppearance="?attr/textAppearanceBody2"
                            android:textColor="?android:attr/textColorSecondary" />

                    </LinearLayout>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:checkable="true"
                android:clickable="true"
                android:focusable="true"
                android:minHeight="48dp">

                <LinearLayout
                    android:id="@+id/ll_print_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/tx_set_name"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/setName"
                                android:textAppearance="?attr/textAppearanceHeadline6" />

                            <TextView
                                android:id="@+id/tx_setline"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="8dp"
                                android:layout_marginBottom="16dp"
                                android:text="@string/setLine"
                                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                                android:textColor="?android:attr/textColorSecondary" />

                        </LinearLayout>

                        <ImageView
                            android:id="@+id/iv_item_cardlist_set_image"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_gravity="center"
                            android:contentDescription="@string/image"
                            android:scaleType="centerCrop" />

                    </LinearLayout>
                </LinearLayout>


            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>